# ESP32-s3-StepperPowerFeed

./: .gitmodules
src/: .gitignore  CMakeLists.txt  CMakeSettings.json  Pendant functions.txt  esp-idf-vscode-generated.gdb  fix.bat  installToolchain.ps1  sdkconfig.old2  src.code-workspace  startIdf.ps1  stepperpowerfeed.cppcheck
src/components/Exception/: CMakeLists.txt  Exception.cpp  Exception.h
src/components/FastAccelStepper/: CMakeLists.txt
src/components/FastAccelStepper/src/: StepperISR.h  StepperISR_esp32.cpp  StepperISR_esp32_rmt.cpp  common.h
src/components/MovePlanner/: CMakeLists.txt  MovePlanner.cpp  MovePlanner.h
src/components/RMTAccelerationStepper/: CMakeLists.txt  RMTStepper.cpp  RMTStepper.h  RMTStepperStateMachineEvents.hpp  RMTStepperStateMachineStates.hpp  StepperMotorEncoder.cpp  StepperMotorEncoder.h  rmt_stepper_motor.cpp
src/components/RmtStepper/: CMakeLists.txt  Readme.txt  RmtStepper.c
src/components/StateMachine/: CMakeLists.txt  StateMachine.hpp
src/main/: Axis.cpp  Axis.h  CMakeLists.txt  Machine.cpp  Machine.h  Stepper.cpp  Stepper.h  idf_component.yml  main.cpp
src/stepperpowerfeed-cppcheck-build-dir/: Axis.a1  Axis.a1.clang-tidy-cmd  Axis.a1.clang-tidy-results  Machine.a1  Machine.a1.clang-tidy-cmd  Machine.a1.clang-tidy-results  MovePlanner.a1  MovePlanner.a1.clang-tidy-cmd  MovePlanner.a1.clang-tidy-results  MovePlanner.cpp.snalyzerinfo  RMTStepper.a1  RMTStepper.a1.clang-tidy-cmd  RMTStepper.a1.clang-tidy-results  Stepper.a1  Stepper.a1.clang-tidy-cmd  Stepper.a1.clang-tidy-results  StepperMotorEncoder.a1  StepperMotorEncoder.a1.clang-tidy-cmd  StepperMotorEncoder.a1.clang-tidy-results  StepperMotorEncoder.cpp.snalyzerinfo  StepperMotorEncoder.s1  files.txt  format.a1  format.a1.clang-tidy-cmd  format.a1.clang-tidy-results  format.cc.snalyzerinfo  lastResults.xml  main.a1  main.a1.clang-tidy-cmd  main.a1.clang-tidy-results  os.a1  os.a1.clang-tidy-cmd  os.a1.clang-tidy-results  os.cc.snalyzerinfo  project_elf_src_esp32s3.a1  project_elf_src_esp32s3.a1.clang-tidy-cmd  project_elf_src_esp32s3.a1.clang-tidy-results  statistics.txt
win64_tests/: .gitignore  CMakeLists.txt  CMakePresets.json  win64_tests.cpp  win64_tests.h
